--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
             "email": "pertti.soomann@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^8.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
